# agentic-ops-platform

./: .gitignore  README.md  pyproject.toml
.devcontainer/: devcontainer.json
data/analytics/: weekly_kpis.csv
src/agents/: routing.py  schemas.py  supervisor.py
src/app/: main.py
src/mcp_servers/data_server/: repository.py  schemas.py
src/tests/: test_data_repository.py  test_routing.py
